2005-01-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm, Engine.pm: Clean up aptdb (UseBinaryDist)
	stuff:
		- Normal usage of regexes, safe use of 'open', OO usage in
		apt-cache parsing.
		- Moved aptgetable status into regular fink DB.
		- Fixed bug where fink would try to use apt-get to fetch a .deb when
		the apt-cache info comes from dpkg status (not a real repo).
		- Removed Package::is_in_apt and fixed all uses thereof.
		- Make fink complain if two packages have the same fullname.

2005-01-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix conditional_pkg_list whitespace removal again.
	* Services.pm: collapse_whitespace and pkglist2lol now remove
	leading/trailing whitespace.

2005-01-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make sure conditional_pkg_list always removes
	leading/trailing whitespace.

2005-01-25  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: gen_gcc_hash() now includes dpkg status, uses
	%r=0 for absent pkg.

2005-01-24  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Remove ncurses-dev from "important" (implied
	dependency) list.

2005-01-24  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Extract core of gcc* pkg data into new
	gen_gcc_hash(). All expected gcc* pkgs now always exist in
	pdb (marked "uninstalled" if not present).

2005-01-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Extract core of cmd_fetch_all() and
	cmd_fetch_all_missing() into a new do_fetch_all(), which uses
	call_queue_*(). Fix spacing on parse_fetch_options() help. Reorder
	some subs. Move BuildConflicts removal to after src/deb download.

2005-01-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* VirtPackage.pm: Don't print messages when not in debug mode (they
	will be seen every time apt/dpkg is run!). Eliminate repetition of
	path to cc1plus.

2005-01-23  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, Services.pm: Replace do_calls() with