@@ -1,3 +1,7 @@
+2005-01-27  Daniel Macks  <dmacks@netspace.org>
+
+	* Validation.pm: Warn if %p/lib/charset.alias in .deb other than libgettextN.
+
 2005-01-27  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
 	* PkgVersion.pm, Package.pm, Engine.pm: Clean up aptdb (UseBinaryDist)
